// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`On-demand logic function execution from a session with an installed application whose registration the workspace does not own should refuse to delete the function 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "LOGIC_FUNCTION_FORBIDDEN",
    "userFriendlyMessage": "You are not allowed to access this function.",
  },
  "message": "Only logic functions written in this workspace can be read or changed from source",
  "name": "ForbiddenError",
}
`;

exports[`On-demand logic function execution from a session with an installed application whose registration the workspace does not own should refuse to read the function source from the custom application folder 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "LOGIC_FUNCTION_FORBIDDEN",
    "userFriendlyMessage": "You are not allowed to access this function.",
  },
  "message": "Only logic functions written in this workspace can be read or changed from source",
  "name": "ForbiddenError",
}
`;

exports[`On-demand logic function execution from a session with an installed application whose registration the workspace does not own should refuse to run a function that is not a workflow action 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "LOGIC_FUNCTION_FORBIDDEN",
    "userFriendlyMessage": "You are not allowed to access this function.",
  },
  "message": "Only logic functions written in this workspace or exposed as workflow actions can be run on demand",
  "name": "ForbiddenError",
}
`;

exports[`On-demand logic function execution from a session with an installed application whose registration the workspace does not own should refuse to write the function source into the custom application folder 1`] = `
{
  "extensions": {
    "code": "FORBIDDEN",
    "subCode": "LOGIC_FUNCTION_FORBIDDEN",
    "userFriendlyMessage": "You are not allowed to access this function.",
  },
  "message": "Only logic functions written in this workspace can be read or changed from source",
  "name": "ForbiddenError",
}
`;
